# choreo-docs-rag-using-slm

./: .gitignore  main.py  pyproject.toml
app/v2/: Answers.md  INFO.md  REPO.md  context.py  document_manager.py  main.py  pyproject.toml  vector.py
app/v2/all_choreo_markdown_folder/: final_summary.md  what-is-choreo.md
app/v2/all_choreo_markdown_folder/administer/: administer_sum.md  administer_summary.md  configure-a-custom-domain-for-your-organization.md  configure-approvals-for-choreo-workflows.md
app/v2/all_choreo_markdown_folder/api-management/: api-management_sum.md  api-management_summary.md
app/v2/all_choreo_markdown_folder/authentication-and-authorization/: authentication-and-authorization_sum.md  authentication-and-authorization_summary.md
app/v2/all_choreo_markdown_folder/choreo-cli/: choreo-cli_sum.md  choreo-cli_summary.md
app/v2/all_choreo_markdown_folder/choreo-concepts/: choreo-concepts_sum.md  choreo-concepts_summary.md  ci-cd.md  organization.md
app/v2/all_choreo_markdown_folder/choreo-samples/: choreo-samples_sum.md  choreo-samples_summary.md  explore-the-demo-organization.md  quick-deploy-a-sample.md  samples-overview.md
app/v2/all_choreo_markdown_folder/consuming-services/: consuming-a-service-apikey.md  consuming-a-sevice-oauth2.md  consuming-services_sum.md  create-a-subscription.md  (+7 more)
app/v2/choreo_concepts_markdown_folder/: organization.md
app/v2/chroma_all_choreo_db/: chroma.sqlite3
app/v2/chroma_choreo_concepts_db/: chroma.sqlite3
app/v2/chroma_langchain_db/: chroma.sqlite3
app/v2/markdown_folder/: resource-hierarchy.md
(+76 files in other folders)
