[project]
name = "v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-ollama>=0.3.3",
    "langchain-text-splitters>=0.3.8",
    "pandas>=2.3.0",
    "unstructured[md]>=0.17.2",
]
